# DataStructuresComparison

./: .gitignore  Array.cpp  Array.h  BSTree.cpp  BSTree.h  CMakeLists.txt  Counter.cpp  Counter.h  Heap.cpp  Heap.h  List.cpp  List.h  ListElement.cpp  ListElement.h  Program.cpp  Program.h  README.md  Report - supplement 1.docx  Report.docx  Structure.cpp  Structure.h  main.cpp  sdizo1.xlsx
wyniki - bst/: bst-dodawanie-10000-100.txt  bst-dodawanie-10000-16383.txt  bst-dodawanie-10000-32767.txt  bst-dodawanie-20000-100.txt  bst-dodawanie-20000-16383.txt  bst-dodawanie-20000-32767.txt  bst-dodawanie-50-100.txt  bst-dodawanie-50-16383.txt  bst-dodawanie-50-32767.txt  bst-szukanie-10000-100.txt  bst-szukanie-10000-16383.txt  bst-szukanie-10000-32767.txt  bst-szukanie-20000-100.txt  bst-szukanie-20000-16383.txt  bst-szukanie-20000-32767.txt  bst-szukanie-50-100.txt  bst-szukanie-50-16383.txt  bst-szukanie-50-32767.txt  bst-usuwanie-wartosci-10000-100.txt  bst-usuwanie-wartosci-10000-16383.txt  bst-usuwanie-wartosci-10000-32767.txt  bst-usuwanie-wartosci-20000-100.txt  bst-usuwanie-wartosci-20000-16383.txt  bst-usuwanie-wartosci-20000-32767.txt  bst-usuwanie-wartosci-50-100.txt  bst-usuwanie-wartosci-50-16383.txt  bst-usuwanie-wartosci-50-32767.txt
wyniki - kopiec/: kopiec-dodawaniek-10000-100.txt  kopiec-dodawaniek-10000-16383.txt  kopiec-dodawaniek-10000-32767.txt  kopiec-dodawaniek-20000-100.txt  kopiec-dodawaniek-20000-16383.txt  kopiec-dodawaniek-20000-32767.txt  kopiec-dodawaniek-50-100.txt  kopiec-dodawaniek-50-16383.txt  kopiec-dodawaniek-50-32767.txt  (+45 more)
(+352 files in other folders)
